# tcapi

./: Dockerfile  README.md  docker-compose.yml.example  pyproject.toml  traefik.dev.toml
app/: db.py  main.py
