[tool.poetry]
name = "tcapi"
version = "0.1.0"
description = ""
authors = ["Tom Camp <tomcamp@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.7"
ormar = "^0.12.2"
asyncpg = "^0.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
